# AeroBaseIndia

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  deploy.yml
deploy/k8s/: backend-deployment.yaml  backend-service.yaml  backend.yaml  configmap.yaml  hpa.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
migrations/: 001_create_auth_tables.sql  002_create_flights_table.sql  003_create_gates_table.sql  004_create_passengers_table.sql  005_create_tickets_table.sql  006_create_baggage_table.sql  007_create_staff_table.sql  008_create_audit_logs.sql  009_create_subscription_plans.sql  010_create_tenant_subscriptions.sql  011_create_invoices.sql  012_create_roles.sql  013_create_permissions.sql  014_create_role_permissions.sql  015_create_user_roles.sql  016_seed_roles.sql  017_create_audit_logs.sql  018_create_subscription_plans.sql  019_create_tenant_subscriptions.sql  020_create_usage_metrics.sql  021_create_invoices.sql  022_create_payments.sql
src/: main.cpp
src/config/: AppConfig.h  DatabaseManager.h  RedisManager.h  config.json
src/controllers/: AuditController.cpp  AuthController.cpp  BaggageController.cpp  BillingController.cpp  BookingController.cpp  FlightController.cc  FlightController.h  FlightSocketController.cpp  GateController.cpp  HealthController.cpp  LiveEventsController.cpp  LiveEventsController.h  MetricsController.cpp
src/core/: Logger.h
src/metrics/: AirportMetrics.h
src/middleware/: AuthMiddleware.h  PerformanceMiddleware.h  PermissionMiddleware.h  (+2 more)
(+36 files in other folders)
